--- a/requirements.txt
+++ b/requirements.txt
@@ -8,5 +8,5 @@ nltk
 summa
 sumy
 lexrank
-https://download.pytorch.org/whl/torch_stable.html  # see pytorch.org for installation
-https://github.com/huggingface/transformers  # see transformers installation from source
+#https://download.pytorch.org/whl/torch_stable.html  # see pytorch.org for installation
+#https://github.com/huggingface/transformers  # see transformers installation from source
